--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,8 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
+    <!--GoogleMapのチュートリアルでは"my api key"の部分にAPIキーをべた書きしたが、キーを直接書くのは危ない気がするので-->
+    <!-- 環境変数にキーを登録し、ビルド時にそれを参照するようにした。 -->
+    <!-- このファイルはたぶんもう使われてない。 -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> my api key </string>
 </resources>
